- Fixare selectGenerator - aggiungere N° esercizi al tabata - Gestire la classe universale INVISIBLES - Rivedere allenamenti in generale

--- a/Css/cssTemporanei.css
+++ b/Css/cssTemporanei.css
@@ -1,7 +1,15 @@
-#checkPause {
+#checkPause { /* PER PAUSE EMOM */
+  display : none;
+}
+
+#timerForTime {
   display : none;
 }
 
 .selezioneForTime {
   display : none;
+}
+
+.invisibles { /* SOSTITUIRE TUTTE LE REGOLE SOPRA CON QUESTA CLASSE */
+  display : none
 }
